--- a/app/src/main/res/values/frm_styles.xml
+++ b/app/src/main/res/values/frm_styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- 框架主题基础样式，不允许修改，如有改动请至项目styles.xml继承后自定义 -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme1" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@color/transparent</item>
