--- a/app/src/main/res/layout/item_task_manager_layout.xml
+++ b/app/src/main/res/layout/item_task_manager_layout.xml
@@ -65,6 +65,8 @@
             android:gravity="center"
             android:text="状态" />
 
+
+
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -82,6 +84,22 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/item_task_manager_add_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/btn_bg_gray"
+                android:gravity="center"
+                android:text="添加图片"
+                android:textColor="#fff" />
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dp"
