--- a/app/src/main/res/layout/activity_task_management_.xml
+++ b/app/src/main/res/layout/activity_task_management_.xml
@@ -115,6 +115,15 @@
             android:textColor="@color/textblue"
             android:textSize="18dp"
             android:textStyle="bold" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="图片"
+            android:textColor="@color/textblue"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
