--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="switchRight">#FF3030</color>
     <color name="switchLeft">#008B00</color>
 
+    <color name="orangef72">#FF7F24</color>
+
 </resources>
