图片功能界面设计

--- a/app/src/main/res/layout/activity_add_picture.xml
+++ b/app/src/main/res/layout/activity_add_picture.xml
@@ -52,7 +52,11 @@
             android:textColor="#fff" />
     </RelativeLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include layout="@layout/view_add_picture"/>
+    </ScrollView>
 
-    <include layout="@layout/view_add_picture"/>
 
 </LinearLayout>
