--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="switchLeft">#008B00</color>
 
     <color name="orangef72">#FF7F24</color>
-
+    <color name="border">#1D85CB</color>
 </resources>
