--- a/app/src/main/res/layout/activity_add_picture.xml
+++ b/app/src/main/res/layout/activity_add_picture.xml
@@ -51,12 +51,11 @@
             android:text="退出"
             android:textColor="#fff" />
     </RelativeLayout>
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <include layout="@layout/view_add_picture"/>
-    </ScrollView>
 
+    </ScrollView>
 
 </LinearLayout>
