--- a/app/src/main/res/layout/item_add_picture.xml
+++ b/app/src/main/res/layout/item_add_picture.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="300dp"
+    android:layout_height="400dp"
     android:padding="10dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/shape_ed_bold">
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:id="@+id/item_add_picture_image"
+        android:layout_width="280dp"
+        android:layout_height="330dp"
         app:srcCompat="@android:drawable/ic_dialog_dialer" />
 
     <Button
-        android:id="@+id/btn_delete"
+        android:id="@+id/item_add_picture_btn"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="50dp"
         android:text="删除"
+        android:gravity="center"
         android:background="@drawable/orange"
         android:textColor="@color/white"
         android:textSize="18sp" />
