--- a/app/src/main/res/layout/view_add_picture.xml
+++ b/app/src/main/res/layout/view_add_picture.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp"
+    android:layout_margin="20dp"
     android:background="@color/searchbg">
 
     <!--站房环境-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="450dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:orientation="horizontal"
             android:background="@drawable/shape_ed_bold">
 
@@ -44,18 +44,18 @@
         <com.example.sinoyd.frameapplication.KotlinFrame.Frame.View.HorizontalListView
             android:id="@+id/lv_picture_container_1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="400dp"
             android:background="@drawable/shape_ed_bold"/>
     </LinearLayout>
     <!--仪器数据-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="450dp"
         android:orientation="vertical"
         android:background="@drawable/shape_ed_bold">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_weight="1"
@@ -81,10 +81,9 @@
         <com.example.sinoyd.frameapplication.KotlinFrame.Frame.View.HorizontalListView
             android:id="@+id/lv_picture_container_2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="400dp"
             android:background="@drawable/shape_ed_bold"/>
     </LinearLayout>
-
 
 
 </LinearLayout>
