--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <paths>
-        <files-path name="yd_files" path="images/"/>
-        <cache-path name="yd_cache" path="images/" />
-        <external-files-path name="external-files-path" path="images/" />
-        <external-path name="yd_external_path" path="images/" />
-    </paths>
-</resources>
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-path name="external" path="yd" />
+</paths>
