1.图片上传 2.签到功能 3.站点定位

--- a/app/src/main/res/layout/item_sign_in_layout.xml
+++ b/app/src/main/res/layout/item_sign_in_layout.xml
@@ -57,15 +57,20 @@
             android:text="运维结束时间"
             android:textColor="@color/textblue"
             android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/tv_upload_state"
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="上传状态"
-            android:textColor="@color/textblue"
-            android:textSize="20dp" />
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/tv_upload_state"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/btn_bg_gray"
+                android:gravity="center"
+                android:text="上传状态"
+                android:textColor="#fff" />
+
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
