--- a/app/src/main/res/layout/item_task_manager_layout.xml
+++ b/app/src/main/res/layout/item_task_manager_layout.xml
@@ -96,7 +96,7 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/btn_bg_gray"
                 android:gravity="center"
-                android:text="添加图片"
+                android:text="添加"
                 android:textColor="#fff" />
 
         </RelativeLayout>
