--- a/app/src/main/res/layout/activity_site_location_.xml
+++ b/app/src/main/res/layout/activity_site_location_.xml
@@ -30,10 +30,10 @@
 
     </LinearLayout>
 
-    <!--<com.amap.api.maps.MapView-->
-        <!--android:id="@+id/map"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" >-->
-    <!--</com.amap.api.maps.MapView>-->
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/bmapView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:clickable="true" />
 
 </LinearLayout>
