--- a/app/src/main/res/layout/activity_sign_in_.xml
+++ b/app/src/main/res/layout/activity_sign_in_.xml
@@ -28,6 +28,14 @@
             android:textColor="@color/textblue"
             android:textSize="20dp" />
 
+        <TextView
+            android:id="@+id/tv_sign_in_test"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:text="未签到"
+            android:background="@color/transparent" />
+
         <ImageView
             android:id="@+id/iv_scan"
             android:layout_width="70dp"
